# ShopApps

./: .gitignore  README.md  pyproject.toml  scaffold_project.sh  shopapps.db
.ai_files/: coding-conventions.md  project_descrition.md  roadmap.md  tasks.md  technical-conventions.md
.ai_files/design/: sidebar-navigation-design.md
.ai_files/spec/: accounting-mvs-spec.md  contacts-mvs-spec.md  inventory-mvs-spec.md  main-window-spec.md  sidebar-navigation-spec.md
.ai_files/specs/: accounting-mvs-spec.md  contacts-mvs-spec.md  inventory-mvs-spec.md  main-window-spec.md  reports-mvs-spec.md
.claude/skills/app-logic-agent/: SKILL.md
.claude/skills/backend-api-agent/: SKILL.md
.claude/skills/business-logic-agent/: SKILL.md
.claude/skills/database-agent/: SKILL.md
.claude/skills/documentation-agent/: SKILL.md
.claude/skills/product-requirements-agent/: SKILL.md
.claude/skills/security-agent/: SKILL.md
.claude/skills/testing-qa-agent/: SKILL.md
.claude/skills/ui-ux-agent/: SKILL.md
native/cython_ext/: example.pyx  setup.py
src/apps/contacts/: forms.py  main.py
src/core/db/: __init__.py  models.py
src/shared_ui/desktop/windows/: main_window.py
tests/unit/: test_contacts.py
