[project]
name = "."
version = "0.1.0"
description = ""
requires-python = ">=3.11"
dependencies = [
    "PySide6",
    "peewee",
]

[project.optional-dependencies]
# Only needed once you actually have a profiled bottleneck to address.
native = [
    "numba",
    "cython",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/."]
