[project]
name = "ShopApps"
version = "0.1.0"
description = "Integrated desktop apps for Karrayan Office Equipment Store management"
requires-python = ">=3.11"
dependencies = [
    "PySide6",           # Qt desktop UI (RTL support)
    "peewee",            # ORM
    "python-dotenv",     # Config
    "openpyxl",          # Excel reports
    "requests",          # APIs (future Grok)
    "PyPDF2",            # PDF generation
    "qtawesome",         # Icons
    "Pillow",            # Images

]

[project.optional-dependencies]
native = [
    "numba",
    "cython",
]
development = [
    "pytest",
    "black",
    "isort",
    "mypy",
    "pytest-qt",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]